# repository-harness

crates/harness-cli/: Cargo.toml
crates/harness-cli/src/: application.rs  infrastructure.rs  interface.rs
docs/: review-fixes-1d30bf62-to-main.md
docs/stories/: US-018-phase4-cli-ux-hardening.md
docs/stories/epics/E01-durable-layer/US-002-rust-harness-cli/: design.md  validation.md
scripts/: README.md  harness  harness-cli-release-tag  install-harness.sh
