[package]
name = "harness-cli"
version = "0.1.7"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
rusqlite = { version = "0.39.0", features = ["bundled"] }
thiserror = "2.0.18"

[dev-dependencies]
tempfile = "3.27.0"
